# Concept-CmakeModularizedLibrary

./: CMakeLists.txt  README.md  main.cc
lib/mainlib/: CMakeLists.txt
lib/mainlib/mainlib/: hellomodule.hh  library.hh
lib/module/: CMakeLists.txt
lib/module/mainlib/: implementhellomodule.hh
